bug 340603: getting table updates consumes large amounts of memory; interface for streaming updates r+a=darin