toolkit/components/build/nsToolkitCompsModule.cpp
@@ -56,6 +56,7 @@
 
 #ifdef MOZ_URL_CLASSIFIER
 #include "nsUrlClassifierDBService.h"
+#include "nsUrlClassifierStreamUpdater.h"
 #endif
 
 #ifdef MOZ_FEEDS
@@ -84,6 +85,7 @@ NS_GENERIC_FACTORY_CONSTRUCTOR(nsTypeAheadFind)
 #ifdef MOZ_URL_CLASSIFIER
 NS_GENERIC_FACTORY_SINGLETON_CONSTRUCTOR(nsUrlClassifierDBService,
                                          nsUrlClassifierDBService::GetInstance)
+NS_GENERIC_FACTORY_CONSTRUCTOR(nsUrlClassifierStreamUpdater)
 #endif
 
 #ifdef MOZ_FEEDS
@@ -132,6 +134,10 @@ static const nsModuleComponentInfo components[] =
     NS_URLCLASSIFIERDBSERVICE_CID,
     NS_URLCLASSIFIERDBSERVICE_CONTRACTID,
     nsUrlClassifierDBServiceConstructor },
+  { "Url Classifier Stream Updater",
+    NS_URLCLASSIFIERSTREAMUPDATER_CID,
+    NS_URLCLASSIFIERSTREAMUPDATER_CONTRACTID,
+    nsUrlClassifierStreamUpdaterConstructor },
 #endif
 #ifdef MOZ_FEEDS
   { "Unescape HTML",
